--- a/about/note/index.html
+++ b/about/note/index.html
@@ -1,5 +1,5 @@
 	<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
+<html>
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -13,9 +13,9 @@
   
 
   
-  <link rel="stylesheet" href="http://huntma.github.iocss/poole.css">
-  <link rel="stylesheet" href="http://huntma.github.iocss/syntax.css">
-  <link rel="stylesheet" href="http://huntma.github.iocss/hyde.css">
+  <link rel="stylesheet" href="https://huntma.github.io/css/poole.css">
+  <link rel="stylesheet" href="https://huntma.github.io/css/syntax.css">
+  <link rel="stylesheet" href="https://huntma.github.io/css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   
@@ -30,7 +30,7 @@
 	<div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://huntma.github.io"><h1>Hunt Ma</h1></a>
+      <a href="https://huntma.github.io/"><h1>Hunt Ma</h1></a>
       <p class="lead">
 	  Helloooo. This site is for learning. Complete, accurate, to-the-point information.
       </p>
