more content to webeasy

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<title>Hunt Ma</title>
 		
 
-		<link href="https://huntma.github.io//css/bootstrap.min.css" rel="stylesheet">
-		<link href="https://huntma.github.io//css/hunt.css" rel="stylesheet">
+		<link href="https://huntma.github.io/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://huntma.github.io/css/hunt.css" rel="stylesheet">
 	</head>
 
 <body>
