--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<link href="https://huntma.github.io/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://huntma.github.io/css/hunt.css" rel="stylesheet">
+		<link href="https://huntma.github.io/css/prism.css" rel="stylesheet">
 	</head>
 
 <body>
@@ -53,8 +54,8 @@
 
 <div class="jumbotron background">
 	<div class="container">
-		<h1>Welcome to hunt.</h1>
-		<p>This is a hugo theme that uses bootstrap and is well commented.</p>
+		<h1>Welcome to Hunt's site.</h1>
+		<p>I hope you find something useful here.</p>
 		<br>
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Button!</a></p>
 	</div>
@@ -67,12 +68,12 @@
 			<div class="clickable">
 			<span class="glyphicon glyphicon-cloud glyphicon-large" aria-hidden="true"></span>
 			<h3>About</h3>
-			<p>In summary, it's about learning efficiently.</p>
+			<p>In summary, it's about us.</p>
 			</div>
 			</a>
 		</div>
 		<div class="col-md-4">
-		  <a href="/post/">
+		  <a href="/post">
 			<div class="clickable">
 			<span class="glyphicon glyphicon-pencil glyphicon-large" aria-hidden="true"></span>
 			<h3>Posts</h3>
@@ -96,6 +97,7 @@
 </body>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://huntma.github.io//js/bootstrap.min.js"></script>
+	<script src="https://huntma.github.io/js/bootstrap.min.js"></script>
+	<script src="https://huntma.github.io/js/prism.js"></script>
 </html>
 
