--- a/about/index.html
+++ b/about/index.html
@@ -12,6 +12,7 @@
 
 		<link href="https://huntma.github.io/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://huntma.github.io/css/hunt.css" rel="stylesheet">
+		<link href="https://huntma.github.io/css/prism.css" rel="stylesheet">
 	</head>
 
 
@@ -68,6 +69,7 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://huntma.github.io//js/bootstrap.min.js"></script>
+	<script src="https://huntma.github.io/js/bootstrap.min.js"></script>
+	<script src="https://huntma.github.io/js/prism.js"></script>
 </html>
 
